--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "@trpc/next": "^10.9.0",
     "@trpc/react-query": "^10.9.0",
     "@trpc/server": "^10.9.0",
+    "boardgamegeekclient": "^1.7.2",
+    "class-variance-authority": "^0.4.0",
     "daisyui": "^2.51.3",
     "next": "^13.2.1",
     "next-auth": "^4.19.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.3",
     "superjson": "1.9.1",
     "zod": "^3.20.6"
   },
